--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,9 @@
 PORT=5000
 MONGO_URI=mongodb+srv://hellourgent5:Project7890@cluster0.dwzgfrr.mongodb.net/blip?retryWrites=true&w=majority
 JWT_SECRET=hellourgent_secret_2025
-NODE_ENV=production
+STRIPE_SECRET_KEY=your_stripe_secret
+CLIENT_URL=http://localhost:3000
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your_email@example.com
+SMTP_PASS=email_password
