--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,3 @@
 
 PORT=5000
-MONGO_URI=mongodb+srv://hellourgent5:Project7890@cluster0.dwzgfrr.mongodb.net/blip?retryWrites=true&w=majority
-JWT_SECRET=hellourgent_secret_2025
-STRIPE_SECRET_KEY=your_stripe_secret
-CLIENT_URL=http://localhost:3000
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USER=your_email@example.com
-SMTP_PASS=email_password
+MONGO_URI=mongodb+srv://helloservices00_db_user:Project1234@cluster0.atkzht5.mongodb.net/?appName=Cluster0
