--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 
 PORT=5000
-MONGO_URI=mongodb+srv://helloservices00_db_user:Project1234@cluster0.atkzht5.mongodb.net/?appName=Cluster0
+MONGO_URI=mongodb+srv://helloservices00_db_user:Project1234@cluster0.atkzht5.mongodb.net/helloservices?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=your_jwt_secret_key
