--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
+PORT=10000
+MONGO_URI=mongodb+srv://hellourgent5:Project7890@cluster0.dwzgfrr.mongodb.net/huzur?retryWrites=true&w=majority
+JWT_SECRET=hellourgent
 
-PORT=5000
-MONGO_URI=mongodb+srv://helloservices00_db_user:Project1234@cluster0.atkzht5.mongodb.net/helloservices?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=your_jwt_secret_key
+
